[package]
name = "pm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
argon2 = "0.5.3"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
educe = "0.6.0"
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["blocking", "native-tls-vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
ssh-key = { version = "0.6.7", features = ["serde", "ed25519", "getrandom"] }
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.51", features = ["full"] }
uuid = { version = "1.23.1", features = ["serde", "v7", "fast-rng"] }
zeroize = { version = "1.8.2", features = ["serde", "derive"] }
