[package]
name = "pm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
argon2 = "0.5.3"
base64 = "0.22.1"
bytes = {version = "1.11.1", features = ["serde"]}
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
educe = "0.6.0"
keyring = { version = "3.6.3", features = ["windows-native", "linux-native-sync-persistent", "vendored", "crypto-rust"] }
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["blocking", "native-tls-vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["serde"] }
tokio = { version = "1.51", features = ["full"] }
uuid = { version = "1.23.1", features = ["serde", "v7", "fast-rng"] }
zeroize = { version = "1.8.2", features = ["serde", "derive"] }
